--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/bronzdoc/skeletor
+package: github.com/bronzdoc/symbiote
 import:
 - package: gopkg.in/yaml.v2
 - package: github.com/spf13/cobra
