--- a/glide.yaml
+++ b/glide.yaml
@@ -4,3 +4,9 @@ import:
 - package: github.com/spf13/cobra
   subpackages:
   - cobra
+- package: github.com/onsi/ginkgo
+  version: ^1.3.1
+  subpackages:
+  - ginkgo
+- package: github.com/onsi/gomega
+  version: ^1.1.0
