--- a/glide.yaml
+++ b/glide.yaml
@@ -10,3 +10,5 @@ import:
   - ginkgo
 - package: github.com/onsi/gomega
   version: ^1.1.0
+- package: gopkg.in/src-d/go-git.v4
+  version: ^4.0.0-rc9
